syntax = "proto3";

package user;

service UserService {
    rpc GetUser (GetUserRequest) returns (GetUserResponse);
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
}

message GetUserRequest {
    string user_id = 1;
}

message GetUserResponse {
    string user_id = 1;
    string name = 2;
    int32 age = 3;
}

message CreateUserRequest {
    string name = 1;
    int32 age = 2;
}

message CreateUserResponse {
    string user_id = 1;
}
